--- a/index.html
+++ b/index.html
@@ -1,82 +1,128 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Search Engine Optimization - Horiseon</title> <!--Made title more SEO friendly-->
-</head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Search Engine Optimization - Horiseon</title>
+    <!--Made title more SEO friendly-->
+  </head>
 
-<body>
-    <header> <!--Removed div and replaced with header tag-->
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav> <!--Removed div and replaced with nav tag-->
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
+  <body>
+    <header>
+      <!--Removed div and replaced with header tag-->
+      <h1>Hori<span class="seo">seo</span>n</h1>
+      <nav>
+        <!--Removed div and replaced with nav tag-->
+        <ul>
+          <li>
+            <a
+              href="#search-engine-optimization"
+              title="Search Engine Optimization"
+              >Search Engine Optimization</a
+            >
+          </li>
+          <li>
+            <a
+              href="#online-reputation-management"
+              title="Online Reputation Management"
+              >Online Reputation Management</a
+            >
+          </li>
+          <li>
+            <a href="#social-media-marketing" title="Social Media Marketing"
+              >Social Media Marketing</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
-    <figure><img src="./assets/images/digital-marketing-meeting.jpg"/></figure><!--Replaced div with Figure tag. Also removed class and moved background image from css style to self contained img tag-->
+    <figure>
+      <img
+        src="./assets/images/digital-marketing-meeting.jpg"
+        alt="digital marketing meeting. Horiseon Search Engine Optimization, Online Reputation Management and Social Media Marketing."
+      />
+    </figure>
+    <!--Replaced div with Figure tag. Also removed class and moved background image from css-bkg-style to self contained img tag-->
     <main>
-        <section id="search-engine-optimization" class="company-services"> <!-- Replaced div with section tag. fixed ID attribute . added section class-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </section>
-        <section id="online-reputation-management" class="company-services"><!-- Replaced div with section tag. added section class-->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </section>
-        <section id="social-media-marketing" class="company-services"><!-- Replaced div with section tag. added section class-->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </section>
+      <section id="search-engine-optimization" class="company-services">
+        <!-- Replaced div with section tag. fixed ID attribute . added section class-->
+        <img
+          src="./assets/images/search-engine-optimization.jpg"
+          alt="Desk with a laptop, a cup of coffee and a notebook the reads Sear Engine Optimization"
+          class="float-left"
+        />
+        <h2>Search Engine Optimization</h2>
+        <p>
+          The dominance of mobile internet use means that users are searching
+          for the right business as they travel, shop, or sit on their couch at
+          home. Search Engine Optimization (SEO) allows you to increase your
+          visibility and find the right customers for your business.
+        </p>
+      </section>
+      <section id="online-reputation-management" class="company-services">
+        <!-- Replaced div with section tag. added section class-->
+        <img
+          src="./assets/images/online-reputation-management.jpg"
+          alt="Person holding a cellphone device at a desk with a laptop that on screen shows a reputation graph."
+          class="float-right"
+        />
+        <h2>Online Reputation Management</h2>
+        <p>
+          The web is full of opinions, and some of these can be negative. Social
+          media allows anyone with an internet connection to say whatever they
+          want about your business. Online Reputation Management gives you the
+          control over what potential customers see when they search for your
+          business.
+        </p>
+      </section>
+      <section id="social-media-marketing" class="company-services">
+        <!-- Replaced div with section tag. added section class-->
+        <img
+          src="./assets/images/social-media-marketing.jpg"
+          alt="Group of people seating around table with desk and multiple visual icons related to social media marketing"
+          class="float-left"
+        />
+        <h2>Social Media Marketing</h2>
+        <p>
+          Social media continues to have a sizable influence on buying habits.
+          Social media marketing helps you determine which platforms are suited
+          to your brand, using analytics to find the right markets and increase
+          your lead generation.
+        </p>
+      </section>
     </main>
-    <aside> <!--replaced div tag with aside-->
-        <section class="benefits">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </section>
-        <section class="benefits">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </section>
-        <section class="benefits">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </section>
+    <aside>
+      <!--replaced div tag with aside-->
+      <section class="benefits">
+        <h3>Lead Generation</h3>
+        <img src="./assets/images/lead-generation.png" alt="lead generation" />
+        <p>
+          Inbound strategies for lead generation require less work for your
+          business, bringing customers directly to your website.
+        </p>
+      </section>
+      <section class="benefits">
+        <h3>Brand Awareness</h3>
+        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
+        <p>
+          Users find your business through paid and organic searches, increasing
+          the search ranking and visibility for your business.
+        </p>
+      </section>
+      <section class="benefits">
+        <h3>Cost Management</h3>
+        <img src="./assets/images/cost-management.png" alt="Cost Management" />
+        <!--Removed closing img tag and added alt attribute-->
+        <p>
+          As the search ranking for your business increases, your advertising
+          costs decrease, and you no longer need to advertise your page.
+        </p>
+      </section>
     </aside>
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+      <h4>Made with ❤️️ by Horiseon</h4>
+      <!--Changed heading from h2 to h4 (because there are h3's on aside) -->
+      <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
-</body>
-
+  </body>
 </html>
