better hero tag. Additional comments on CSS

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <a
               href="#search-engine-optimization"
               title="Search Engine Optimization"
-              >Search Engine Optimization</a
-            ><!--fixed broken anchor tag-->
+              >Search Engine Optimization</a> <!--fixed broken anchor tag-->
           </li>
           <li>
             <a
@@ -36,9 +35,7 @@
       </nav>
     </header>
 
-    <figure>
-      <img src="./assets/images/digital-marketing-meeting.jpg" />
-    </figure>
+    <figure></figure>
     <!--Replaced div with Figure tag. Also removed class and moved background image from css-bkg-style to self contained img tag-->
     <main>
       <section id="search-engine-optimization" class="company-services">
