additional CSS editing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <a
               href="#search-engine-optimization"
               title="Search Engine Optimization"
-              >Search Engine Optimization</a> <!--fixed broken anchor tag-->
+              >Search Engine Optimization</a
+            >
+            <!--fixed broken anchor tag-->
           </li>
           <li>
             <a
@@ -34,9 +36,9 @@
         </ul>
       </nav>
     </header>
-
+    <!--Replaced div with Figure tag.-->
     <figure></figure>
-    <!--Replaced div with Figure tag. Also removed class and moved background image from css-bkg-style to self contained img tag-->
+    <!--Replaced div with Figure tag. Also removed class-->
     <main>
       <section id="search-engine-optimization" class="company-services">
         <!-- Replaced div with section tag. fixed ID attribute . added section class-->
