--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Search Engine Optimization - Horiseon</title>
     <!--Made title more SEO friendly-->
   </head>
-
   <body>
     <header>
       <!--Removed div and replaced with header tag-->
@@ -20,6 +19,7 @@
               title="Search Engine Optimization"
               >Search Engine Optimization</a
             >
+            <!--fixed broken anchor tag-->
           </li>
           <li>
             <a
@@ -36,13 +36,9 @@
         </ul>
       </nav>
     </header>
-    <figure>
-      <img
-        src="./assets/images/digital-marketing-meeting.jpg"
-        alt="digital marketing meeting. Horiseon Search Engine Optimization, Online Reputation Management and Social Media Marketing."
-      />
-    </figure>
-    <!--Replaced div with Figure tag. Also removed class and moved background image from css-bkg-style to self contained img tag-->
+    <!--Replaced div with Figure tag.-->
+    <figure></figure>
+    <!--Replaced div with Figure tag. Also removed class-->
     <main>
       <section id="search-engine-optimization" class="company-services">
         <!-- Replaced div with section tag. fixed ID attribute . added section class-->
@@ -95,7 +91,10 @@
       <!--replaced div tag with aside-->
       <section class="benefits">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" alt="lead generation" />
+        <img
+          src="./assets/images/lead-generation.png"
+          alt=""
+        /><!--Left empty alt attribute since icon is only decorative-->
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -103,7 +102,8 @@
       </section>
       <section class="benefits">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
+        <img src="./assets/images/brand-awareness.png" alt="" />
+        <!--Left empty alt attribute since icon is only decorative-->
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -111,8 +111,11 @@
       </section>
       <section class="benefits">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" alt="Cost Management" />
-        <!--Removed closing img tag and added alt attribute-->
+        <img
+          src="./assets/images/cost-management.png"
+          alt=""
+        /><!--Left empty alt attribute since icon is only decorative-->
+        <!--Removed closing img tag -->
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
@@ -120,6 +123,7 @@
       </section>
     </aside>
     <footer>
+      <!--Replaced div with semantic tag-->
       <h4>Made with ❤️️ by Horiseon</h4>
       <!--Changed heading from h2 to h4 (because there are h3's on aside) -->
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
