cleaner code formatting

--- a/index.html
+++ b/index.html
@@ -17,33 +17,25 @@
             <a
               href="#search-engine-optimization"
               title="Search Engine Optimization"
-              >Search Engine Optimization</a
-<<<<<<< HEAD
-=======
-
->>>>>>> fab7dddf6470fac7a06ccdde8049d6f326efc58d
-            >
+              >Search Engine Optimization
+            </a>
             <!--fixed broken anchor tag-->
           </li>
           <li>
             <a
               href="#online-reputation-management"
               title="Online Reputation Management"
-              >Online Reputation Management</a
-            >
+              >Online Reputation Management
+            </a>
           </li>
           <li>
-            <a href="#social-media-marketing" title="Social Media Marketing"
-              >Social Media Marketing</a
-            >
+            <a href="#social-media-marketing" title="Social Media Marketing">
+              Social Media Marketing
+            </a>
           </li>
         </ul>
       </nav>
     </header>
-<<<<<<< HEAD
-=======
-
->>>>>>> fab7dddf6470fac7a06ccdde8049d6f326efc58d
     <!--Replaced div with Figure tag.-->
     <figure></figure>
     <!--Replaced div with Figure tag. Also removed class-->
